fix (change list): styling issue where the file name + decorations got squished

--- a/src/frontend/components/change-list/change-list.css
+++ b/src/frontend/components/change-list/change-list.css
@@ -2,6 +2,7 @@ mingit-change-list {
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
+	overflow: hidden;
 
 	change-list {
 		flex-grow: 1;
@@ -32,13 +33,17 @@ mingit-change-list {
 			white-space: nowrap;
 			text-overflow: ellipsis;
 		}
-
+		& span:first-child {
+			flex-shrink: 0;
+			max-width: 70%;
+		}
 		& .secondary {
 			font-size: .9em;
 			opacity: .6;
 		}
 
 		& decorations {
+			flex-shrink: 0;
 			margin-inline-start: auto;
 			font-family: var(--vscode-editor-font-family);
 
